Fixed flow card overflow, added more clear error messages to job submissions and changed gesture handling for recruiters.

--- a/esljobmap/static/foundation/scss/component/_flow_card.scss
+++ b/esljobmap/static/foundation/scss/component/_flow_card.scss
@@ -46,7 +46,7 @@
     }
 
     .flow-card-content {
-        height: 14rem;
+        height: 18rem;
         padding: 0.5rem;
         > div {
             overflow: hidden;
